--- a/h2o-py/build.gradle
+++ b/h2o-py/build.gradle
@@ -1,15 +1,9 @@
 import org.apache.tools.ant.taskdefs.condition.Os
-import java.nio.file.FileSystems
-import java.nio.file.Files
-import java.nio.file.Path
-import java.util.zip.GZIPOutputStream
-import static java.nio.file.StandardCopyOption.*;
 
-defaultTasks 'build_python'
 description = "H2O Python Package"
 
-java.lang.String pythonexe = "python"
-java.lang.String pipexe = "pip"
+String pythonexe = "python"
+String pipexe = "pip"
 if (System.env.VIRTUAL_ENV) {
     pythonexe = "${System.env.VIRTUAL_ENV}/bin/python".toString()
     pipexe = "${System.env.VIRTUAL_ENV}/bin/pip".toString()
@@ -19,12 +13,10 @@ dependencies {
     compile project(":h2o-assemblies:main")
 }
 
-
-def bv = new H2OBuildVersion(rootDir, version)
+def buildVersion = new H2OBuildVersion(rootDir, version)
 
 ext {
-    PROJECT_VERSION = bv.getProjectVersion()
-    T               = getProjectDir().toString()
+    PROJECT_VERSION = buildVersion.getProjectVersion()
 }
 
 
@@ -37,23 +29,26 @@ task makeOutputDir(type: Exec) {
 }
 
 
-task setProjectVersion << {
-    File INIT = new File([T, "h2o", "__init__.py"].join(File.separator))
-    println "    INIT.path = " + INIT.path
-    def txt = INIT.text
-    txt = txt.replaceAll("SUBST_PROJECT_VERSION", PROJECT_VERSION)
-            .replaceAll("SUBST_PROJECT_BUILDINFO", bv.toString())
-
-    INIT.write(txt)
+task setProjectVersion {
+    doLast {
+        File INIT = file("${getProjectDir()}/h2o/__init__.py")
+        println "    INIT.path =" + INIT.path
+        def txt = INIT.text
+        txt = txt.replaceAll("SUBST_PROJECT_VERSION", PROJECT_VERSION)
+                .replaceAll("SUBST_PROJECT_BUILDINFO", buildVersion.toString())
+        INIT.write(txt)
+    }
 }
 
-task resetProjectVersion << {
-    File INIT = new File([T, "h2o", "__init__.py"].join(File.separator))
-    println "    INIT.path = " + INIT.path
-    def txt = INIT.text
-    txt = txt.replaceAll(PROJECT_VERSION, "SUBST_PROJECT_VERSION")
-            .replaceAll("__buildinfo__ = .*", "__buildinfo__ = \"SUBST_PROJECT_BUILDINFO\"")
-    INIT.write(txt)
+task resetProjectVersion {
+    doLast {
+        File INIT = file("${getProjectDir()}/h2o/__init__.py")
+        println "    INIT.path = " + INIT.path
+        def txt = INIT.text
+        txt = txt.replaceAll(PROJECT_VERSION, "SUBST_PROJECT_VERSION")
+                .replaceAll("__buildinfo__ = .*", "__buildinfo__ = \"SUBST_PROJECT_BUILDINFO\"")
+        INIT.write(txt)
+    }
 }
 
 task verifyDependencies(type: Exec) {
@@ -62,50 +57,47 @@ task verifyDependencies(type: Exec) {
     ])
 }
 
-
-
-task buildDist(type: Exec) {
-    dependsOn verifyDependencies
-    dependsOn setProjectVersion
-    dependsOn makeOutputDir
-
+task buildDist(type: Exec, dependsOn: [verifyDependencies, setProjectVersion, makeOutputDir]) {
     doFirst {
         standardOutput = new FileOutputStream("build/tmp/h2o-py_buildDist.out")
     }
     commandLine getOsSpecificCommandLine([pythonexe, "setup.py", "bdist_wheel"])
 }
 
-File testsPath = new File("./tests")
-
+def testsPath = file("./tests")
 task smokeTest(type: Exec) {
     dependsOn build
-    println "PyUnit smoke test (run.py --wipeall --testsize s)..."
     workingDir testsPath
-    commandLine 'pwd'
-	List<java.lang.String> args = [pythonexe, '../../scripts/run.py', '--wipeall', '--testsize', 's']
+	List<String> args = [pythonexe, '../../scripts/run.py', '--wipeall', '--testsize', 's']
     if (project.hasProperty("jacocoCoverage")) {
         args << '--jacoco'
     }
     commandLine args
 }
 
-task cleanUpSmokeTest << {
-    new File([T, "tests/results"].join(File.separator)).deleteDir()
+
+//
+// Cleanup tasks
+//
+
+task cleanUpSmokeTest(type: Delete) {
+    delete file("${getProjectDir()}/results")
 }
 
 task cleanCoverageData(type: Delete) {
-    delete files("${testsPath}/results/jacoco")
+    delete file("${testsPath}/results/jacoco")
 }
 
-task cleaner << {
-    println "Cleaning..."
-    getProjectDir().toString()
-    new File([getProjectDir().toString(), "dist"].join(File.separator)).deleteDir()
-    new File([getProjectDir().toString(), "h2o.egg-info"].join(File.separator)).deleteDir()
-    new File([getProjectDir().toString(), " build/"].join(File.separator)).deleteDir()
-    delete fileTree(dir: "$projectDir/h2o" , include: '**/*.pyc')
+task cleaner(type: Delete) {
+    delete file("${getProjectDir()}/dist")
+    delete file("${getProjectDir()}/h2o.egg-info")
+    delete file("${getProjectDir()}/build")
+    delete fileTree(dir: "$projectDir/h2o", include: '**/*.pyc')
 }
 
+//
+// Define the dependencies
+//
 clean.dependsOn cleaner, cleanUpSmokeTest
 resetProjectVersion.dependsOn buildDist
 task build_python(dependsOn: resetProjectVersion)
